--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-animated-heart": "^0.0.8",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1"
   },
