--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "reat": "^0.0.1-security",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
